--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,24 @@
   color: #61dafb;
 }
 
+.modal-container {
+  position: fixed;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.618);
+  animation: 0.618s ease 0s 1 appear;
+  width: 100%;
+  height: 100%;
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
